[examples] Add native image profile build option to examples / hello-world-jex (#45)
Co-authored-by: robin.bygrave <robin.bygrave@eroad.com>